--- a/website/index.html
+++ b/website/index.html
@@ -246,8 +246,8 @@
         <h1>MyNodeOne</h1>
         <p>Your Private Cloud Infrastructure</p>
         <div class="tagline">Build your own AWS-like cloud with commodity hardware</div>
-        <a href="https://github.com/vinsac/mynodeone" class="cta-button">Get Started</a>
-        <a href="https://github.com/vinsac/mynodeone/blob/main/NEW-QUICKSTART.md" class="cta-button secondary">Quick Start Guide</a>
+        <a href="https://github.com/vinsac/MyNodeOne" class="cta-button">Get Started</a>
+        <a href="https://github.com/vinsac/MyNodeOne/blob/main/NEW-QUICKSTART.md" class="cta-button secondary">Quick Start Guide</a>
     </div>
 
     <div class="container">
@@ -303,7 +303,7 @@
                         <h3>Run Interactive Setup</h3>
                         <p>One command sets up everything. Works on any machine with Ubuntu 24.04.</p>
                         <div class="code-block">
-git clone https://github.com/vinsac/mynodeone.git
+git clone https://github.com/vinsac/MyNodeOne.git
 cd mynodeone
 sudo ./scripts/mynodeone</div>
                     </div>
@@ -458,17 +458,17 @@ kubectl apply -f manifests/examples/fullstack-app.yaml</div>
     <div class="container" style="text-align: center; padding: 100px 20px;">
         <h2 style="font-size: 2.5em; margin-bottom: 30px;">Ready to Build Your Cloud?</h2>
         <p style="font-size: 1.3em; margin-bottom: 40px;">Get started in 30 minutes. 100% free and open source.</p>
-        <a href="https://github.com/vinsac/mynodeone" class="cta-button" style="font-size: 1.2em; padding: 20px 50px;">View on GitHub</a>
+        <a href="https://github.com/vinsac/MyNodeOne" class="cta-button" style="font-size: 1.2em; padding: 20px 50px;">View on GitHub</a>
     </div>
 
     <footer>
         <div class="container">
             <p><strong>MyNodeOne v1.0</strong> - Your Private Cloud Infrastructure</p>
             <p style="margin-top: 20px;">
-                <a href="https://github.com/vinsac/mynodeone">GitHub</a> · 
-                <a href="https://github.com/vinsac/mynodeone/blob/main/NEW-QUICKSTART.md">Quick Start</a> · 
-                <a href="https://github.com/vinsac/mynodeone/blob/main/docs/architecture.md">Documentation</a> · 
-                <a href="https://github.com/vinsac/mynodeone/blob/main/FAQ.md">FAQ</a>
+                <a href="https://github.com/vinsac/MyNodeOne">GitHub</a> · 
+                <a href="https://github.com/vinsac/MyNodeOne/blob/main/NEW-QUICKSTART.md">Quick Start</a> · 
+                <a href="https://github.com/vinsac/MyNodeOne/blob/main/docs/architecture.md">Documentation</a> · 
+                <a href="https://github.com/vinsac/MyNodeOne/blob/main/FAQ.md">FAQ</a>
             </p>
             <p style="margin-top: 30px; opacity: 0.7;">
                 MIT License · Created by <a href="https://github.com/vinsac" style="color: #667eea;">Vinay Sachdeva</a>
