Prepare for v1.0 release: Emphasize consumer hardware focus and cleanup
CONSUMER HARDWARE MESSAGING:

Added prominent consumer hardware focus throughout documentation:

1. README.md:
   - New tagline: 'Transform consumer hardware into enterprise cloud infrastructure'
   - Added 'The Vision' section highlighting old laptops, mini PCs, Raspberry Pi
   - New 'Real-World Hardware Examples' section with 3 budget tiers:
     * $0 setup (use what you have)
     * $400 budget build (used hardware)
     * $800-1000 power user (new mini PCs)
   - Hardware compatibility list (x86_64, ARM64)

2. START-HERE.md:
   - Added 'What is MyNodeOne?' section emphasizing consumer hardware
   - Lists hardware types: old laptops, mini PCs, Raspberry Pi, home servers
   - Clear message: No expensive equipment needed

3. FAQ.md:
   - Updated main description to mention consumer hardware first
   - Added complete 'Hardware Questions' section with 8 detailed Q&As:
     * What hardware do I need? (with examples and costs)
     * Can I use old laptops? (YES with benefits)
     * Does it work on Raspberry Pi? (YES with details)
     * What about mixing different hardware? (YES, fully supported)
     * Do I need enterprise server hardware? (NO\!)
     * What if I only have one computer? (Works great\!)
     * How much does hardware cost? ($0-$1000 breakdown)

4. website/index.html:
   - Updated hero tagline to emphasize consumer hardware
   - Added description: old laptops, mini PCs, Raspberry Pis
   - Clear messaging: No expensive gear, no monthly bills

REPOSITORY CLEANUP:

Removed development/internal files not needed for release:
- ❌ dev-docs/ (entire directory - 12 internal dev files)
- ❌ PUSH-TO-GITHUB.md (internal release instructions)
- ❌ REBRANDING-COMPLETE.md (temporary rebranding guide)
- ❌ STRUCTURE.md (internal documentation structure)

KEPT FOR USERS:
- ✅ All user-facing documentation
- ✅ All scripts and configurations
- ✅ Security documentation (transparency)
- ✅ All guides and tuto

--- a/website/index.html
+++ b/website/index.html
@@ -245,7 +245,11 @@
     <div class="hero">
         <h1>MyNodeOne</h1>
         <p>Your Private Cloud Infrastructure</p>
-        <div class="tagline">Build your own AWS-like cloud with commodity hardware</div>
+        <div class="tagline">Transform consumer hardware into enterprise cloud infrastructure</div>
+        <p style="font-size: 1.1em; margin: 20px auto; max-width: 700px; opacity: 0.95;">
+            Use old laptops, mini PCs, or Raspberry Pis to build your own AWS-like cloud. 
+            No expensive gear. No monthly bills. Your hardware, your control.
+        </p>
         <a href="https://github.com/vinsac/MyNodeOne" class="cta-button">Get Started</a>
         <a href="https://github.com/vinsac/MyNodeOne/blob/main/NEW-QUICKSTART.md" class="cta-button secondary">Quick Start Guide</a>
     </div>
